# window-manager

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: element_enumeration.md
include/: platform_config.h
specs/001-window-list-filter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-window-list-filter/checklists/: requirements.md
specs/001-window-list-filter/contracts/: cli_interface.json  window_manager_api.hpp
specs/002-workspace-window-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-workspace-window-enhancement/checklists/: requirements.md
specs/002-workspace-window-enhancement/contracts/: cli_interface_contract.md  window_manager_enhanced_api.hpp
specs/003-window-focus-by-handle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-window-focus-by-handle/checklists/: requirements.md
specs/003-window-focus-by-handle/contracts/: focus_api.md
specs/004-window-element-filtering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-window-element-filtering/checklists/: requirements.md
specs/004-window-element-filtering/contracts/: command_line_interface.hpp  element_enumerator.hpp  enhanced_window_manager.hpp
src/: main.cpp
src/core/: compatibility_validator.cpp  compatibility_validator.hpp  element_enumerator.cpp  element_enumerator.hpp  element_query.cpp  element_query.hpp  element_result.cpp  element_result.hpp  element_types.cpp  element_types.hpp  enumerator.cpp  enumerator.hpp  exceptions.cpp  exceptions.hpp  focus_operation.cpp  focus_operation.hpp  focus_request.cpp  focus_request.hpp  focus_status.hpp  ui_element.cpp  ui_element.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  workspace.cpp  workspace.hpp  workspace_switch_operation.hpp
src/filters/: filter.cpp  filter.hpp  filter_result.cpp  filter_result.hpp  search_query.cpp  search_query.hpp
src/platform/linux/: x11_element_enumerator.cpp  x11_element_enumerator.hpp  x11_enumerator.cpp  x11_enumerator.hpp
src/platform/macos/: cocoa_element_enumerator.cpp  cocoa_element_enumerator.hpp  cocoa_enumerator.cpp  cocoa_enumerator.hpp
src/platform/windows/: win32_element_enumerator.cpp  win32_element_enumerator.hpp  win32_enumerator.cpp  win32_enumerator.hpp
src/ui/: cli.cpp  cli.hpp  element_cli.cpp  element_cli.hpp  interactive.cpp  interactive.hpp
tests/: CMakeLists.txt  run_tests.sh  test_config.h.in  test_main.cpp
tests/integration/: test_compatibility.cpp  test_workspace_management.cpp
tests/unit/: test_filter_result.cpp  test_search_query.cpp  test_window_info.cpp
